hide overflow, good fix

--- a/CSS/gamesindex.css
+++ b/CSS/gamesindex.css
@@ -9,6 +9,8 @@
         'crabzoo crabdefence crabdefence crabdefence'
         'mizkifsoundboard mizkifsoundboard jumpingbacteria jumpingbacteria';
     gap: 0px;
+
+    overflow: hidden;
 }
 
 /*on desktop*/
